--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"types": ["jest", "node"],
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"lib": ["ESNext"],
@@ -13,6 +14,5 @@
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true
 	},
-	"include": ["src/**/*.ts"],
-	"exclude": ["src/**/*.test.ts"]
+	"include": ["src/**/*.ts", "src/**/*.tsx", "__test__/**/*.ts"]
 }
