--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true
 	},
-	"include": ["src/**/*.ts", "src/**/*.tsx", "__test__/**/*.ts"]
+	"include": ["src/**/*.ts"],
+	"exclude": ["src/**/*.test.ts"]
 }
